CHG: remove unnecesary casts and add generic types